force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>This object stores the actual subscription details, including selected Offer, Premiums. Delivery Schedules, frequency and term.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>Sub-{0000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>