force-app/main/default/objects/Subscription__c/fields/Activation_Fee__c.field-meta.xml
<CustomField>
        <fullName>Activation_Fee__c</fullName>
        <formula>subscription_Offer__r.Activation_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>