force-app/main/default/objects/Subscription__c/fields/Alt_Publications__c.field-meta.xml
<CustomField>
        <fullName>Alt_Publications__c</fullName>
        <label>Alt Publications</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>