force-app/main/default/objects/Subscription__c/fields/Attention_Line__c.field-meta.xml
<CustomField>
        <fullName>Attention_Line__c</fullName>
        <label>Attention Line</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>