force-app/main/default/objects/Subscription__c/fields/Auto_Renew_Recurly_Account__c.field-meta.xml
<CustomField>
        <fullName>Auto_Renew_Recurly_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Renew Recurly Account</label>
        <referenceTo>recurly_v2__Recurly_Account__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Auto_Renew_Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>