force-app/main/default/objects/Subscription__c/fields/Auto_Renew_Tip__c.field-meta.xml
<CustomField>
        <fullName>Auto_Renew_Tip__c</fullName>
        <description>Tip amount for recurring automated invoices</description>
        <label>Auto Renew Tip</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>