force-app/main/default/objects/Subscription__c/fields/Auto_Renew_Tip_Flag__c.field-meta.xml
<CustomField>
        <fullName>Auto_Renew_Tip_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew Tip Flag</label>
        <type>Checkbox</type>
    </CustomField>