force-app/main/default/objects/Subscription__c/fields/Bill_Method__c.field-meta.xml
<CustomField>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Email Reciept</fullName>
                </value>
                <value>
                    <fullName>Checkfree</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Kubra</fullName>
                    <isActive>false</isActive>
                    <label>Kubra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>