force-app/main/default/objects/Subscription__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
        <fullName>Billing_Address__c</fullName>
        <formula>subscription_Account__r.BillingStreet &amp; BR()   
&amp;subscription_Account__r.BillingCity  &amp; ","&amp; " " &amp;subscription_Account__r.BillingState   &amp; " "&amp;subscription_Account__r.BillingPostalCode</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </CustomField>