force-app/main/default/objects/Subscription__c/fields/ContactTextSearch__c.field-meta.xml
<CustomField>
        <fullName>ContactTextSearch__c</fullName>
        <description>This field is updated via workflow rule and equals the name of the contact.  This field is used to make Global search work on Subscriptions</description>
        <label>ContactTextSearch</label>
        <type>TextArea</type>
    </CustomField>