force-app/main/default/objects/Subscription__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <type>TextArea</type>
    </CustomField>