force-app/main/default/objects/Subscription__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the relationship between Subscriptions and Delivery Schedule</description>
        <label>Delivery Schedule</label>
        <referenceTo>Delivery_Schedule__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>