force-app/main/default/objects/Subscription__c/fields/Digital_Opt_Out__c.field-meta.xml
<CustomField>
        <fullName>Digital_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Opt Out</label>
        <type>Checkbox</type>
    </CustomField>