force-app/main/default/objects/Subscription__c/fields/DSI_Browse_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Browse_Id__c</fullName>
        <formula>Contact__r.DSI_Person_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI Browse Id</label>
        <type>Text</type>
    </CustomField>