force-app/main/default/objects/Subscription__c/fields/DSI_Subscription_ID__c.field-meta.xml
<CustomField>
        <fullName>DSI_Subscription_ID__c</fullName>
        <description>Unique Id for DSI</description>
        <externalId>true</externalId>
        <label>DSI Subscription ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>