force-app/main/default/objects/Subscription__c/fields/Email__c.field-meta.xml
<CustomField>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </CustomField>