force-app/main/default/objects/Subscription__c/fields/Expire_Balance__c.field-meta.xml
<CustomField>
        <fullName>Expire_Balance__c</fullName>
        <label>Expire Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>