force-app/main/default/objects/Subscription__c/fields/Expires_On__c.field-meta.xml
<CustomField>
        <fullName>Expires_On__c</fullName>
        <formula>IF(subscription_Offer__r.Free_Trial__c=True,subscription_Current_Period_Ends_At__c, 
			(subscription_Current_Period_Ends_At__c + $CustomMetadata.Subscription_Settings__mdt.Inquirer_DN_Grace_Days.Number_of_Grace_Days__c + Extend_Grace_by_Days__c)
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End Date + Grace Days + Extended Grace Days</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </CustomField>