force-app/main/default/objects/Subscription__c/fields/Extend_Grace_by_Days__c.field-meta.xml
<CustomField>
        <fullName>Extend_Grace_by_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to so that the CSR can extend the number of days of the grace period by 14 days at the most.</description>
        <inlineHelpText>Add the number of days you would like to extend the Grace Period beyond what it currently.  Do not exceed 14 days.</inlineHelpText>
        <label>Extend Grace by Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>