force-app/main/default/objects/Subscription__c/fields/Friday__c.field-meta.xml
<CustomField>
        <fullName>Friday__c</fullName>
        <label>Friday</label>
        <summaryFilterItems>
            <field>Delivery_Schedule__c.Day_Friday__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Delivery_Schedule__c.subscription_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>