force-app/main/default/objects/Subscription__c/fields/HouseholdTextFieldSearch__c.field-meta.xml
<CustomField>
        <fullName>HouseholdTextFieldSearch__c</fullName>
        <description>This field is used in a workflow rule that will update this field to the name of the Household</description>
        <label>HouseholdTextFieldSearch</label>
        <type>TextArea</type>
    </CustomField>