force-app/main/default/objects/Subscription__c/fields/Money_at_Expire__c.field-meta.xml
<CustomField>
        <fullName>Money_at_Expire__c</fullName>
        <formula>- ( Outstanding_Credit__c - Total_Liability__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Money at Expire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>