force-app/main/default/objects/Subscription__c/fields/No_Refund__c.field-meta.xml
<CustomField>
        <fullName>No_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Refund</label>
        <type>Checkbox</type>
    </CustomField>