force-app/main/default/objects/Subscription__c/fields/Number_of_Active_Delivery_Schedules__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Active_Delivery_Schedules__c</fullName>
        <label>Number of Active Delivery Schedules</label>
        <summaryFilterItems>
            <field>Delivery_Schedule__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Delivery_Schedule__c.subscription_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>