force-app/main/default/objects/Subscription__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
        <fullName>Offer_Name__c</fullName>
        <formula>subscription_Offer__r.Name</formula>
        <label>Offer Name</label>
        <type>Text</type>
    </CustomField>