force-app/main/default/objects/Subscription__c/fields/Offer_Term__c.field-meta.xml
<CustomField>
        <fullName>Offer_Term__c</fullName>
        <formula>subscription_Offer__r.Number_of_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>