force-app/main/default/objects/Subscription__c/fields/One_Time_Tip_Amount__c.field-meta.xml
<CustomField>
        <fullName>One_Time_Tip_Amount__c</fullName>
        <label>One Time Tip Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>