force-app/main/default/objects/Subscription__c/fields/Outstanding_Credit__c.field-meta.xml
<CustomField>
        <fullName>Outstanding_Credit__c</fullName>
        <label>Today's Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>