force-app/main/default/objects/Subscription__c/fields/Pending_Change_Date__c.field-meta.xml
<CustomField>
        <fullName>Pending_Change_Date__c</fullName>
        <label>Pending Change Date</label>
        <type>Date</type>
    </CustomField>