force-app/main/default/objects/Subscription__c/fields/Pending_Offer__c.field-meta.xml
<CustomField>
        <fullName>Pending_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Subscriptions (Pending Offer)</relationshipLabel>
        <relationshipName>Subscriptions2</relationshipName>
        <type>Lookup</type>
    </CustomField>