force-app/main/default/objects/Subscription__c/fields/Phone__c.field-meta.xml
<CustomField>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </CustomField>