force-app/main/default/objects/Subscription__c/fields/Phone_Numbers__c.field-meta.xml
<CustomField>
        <fullName>Phone_Numbers__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone Numbers</label>
        <type>Text</type>
    </CustomField>