force-app/main/default/objects/Subscription__c/fields/Piano_Conversion_Log_Response__c.field-meta.xml
<CustomField>
        <fullName>Piano_Conversion_Log_Response__c</fullName>
        <label>Piano Conversion Log Response</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>