force-app/main/default/objects/Subscription__c/fields/Piano_Target_Id__c.field-meta.xml
<CustomField>
        <fullName>Piano_Target_Id__c</fullName>
        <label>Piano Target Id</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </CustomField>