force-app/main/default/objects/Subscription__c/fields/Premium_Opt_Out__c.field-meta.xml
<CustomField>
        <fullName>Premium_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscriber has opted out of premium issues.</description>
        <label>Premium Delivery Opt Out</label>
        <type>Checkbox</type>
    </CustomField>