force-app/main/default/objects/Subscription__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
        <fullName>Publication_Name__c</fullName>
        <formula>subscription_Offer__r.Name</formula>
        <label>Publication Name</label>
        <type>Text</type>
    </CustomField>