force-app/main/default/objects/Subscription__c/fields/Quantity__c.field-meta.xml
<CustomField>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>