force-app/main/default/objects/Subscription__c/fields/Rate__c.field-meta.xml
<CustomField>
        <fullName>Rate__c</fullName>
        <formula>subscription_Offer__r.Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>