force-app/main/default/objects/Subscription__c/fields/Ready_for_DSI__c.field-meta.xml
<CustomField>
        <fullName>Ready_for_DSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for DSI</label>
        <type>Checkbox</type>
    </CustomField>