force-app/main/default/objects/Subscription__c/fields/Recurly_Subscription__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This stores the recurly subscription related to this subscription</description>
        <label>Recurly Subscription</label>
        <referenceTo>recurly_v2__Recurly_Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>