force-app/main/default/objects/Subscription__c/fields/Recurly_Subscription_ID__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Subscription_ID__c</fullName>
        <description>This stores the external ID for the recurly subscription</description>
        <externalId>true</externalId>
        <label>Subscription ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>