force-app/main/default/objects/Subscription__c/fields/Renewal_Amount__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Amount__c</fullName>
        <formula>subscription_Offer__r.Total_Amount__c</formula>
        <inlineHelpText>Total Subscription Amount minus Activation Fee</inlineHelpText>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>