force-app/main/default/objects/Subscription__c/fields/Saturday__c.field-meta.xml
<CustomField>
        <fullName>Saturday__c</fullName>
        <label>Saturday</label>
        <summaryFilterItems>
            <field>Delivery_Schedule__c.Day_Saturday__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Delivery_Schedule__c.subscription_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>