force-app/main/default/objects/Subscription__c/fields/Secondary_Renewal__c.field-meta.xml
<CustomField>
        <fullName>Secondary_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Renewal</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Subscriptions (Secondary Renewal)</relationshipLabel>
        <relationshipName>Subscriptions3</relationshipName>
        <type>Lookup</type>
    </CustomField>