force-app/main/default/objects/Subscription__c/fields/Send_Renew_Notification__c.field-meta.xml
<CustomField>
        <fullName>Send_Renew_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by the CSR is flag whether to Send Auto Renew Notifications</description>
        <label>Send Renew Notification</label>
        <type>Checkbox</type>
    </CustomField>