force-app/main/default/objects/Subscription__c/fields/SignatureAttachmentURL__c.field-meta.xml
<CustomField>
        <fullName>SignatureAttachmentURL__c</fullName>
        <description>Holds the Signature Attachment URL for signatures from the partner community</description>
        <label>SignatureAttachmentURL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>