force-app/main/default/objects/Subscription__c/fields/SignatureURL__c.field-meta.xml
<CustomField>
        <fullName>SignatureURL__c</fullName>
        <description>Stores the signature URL from customer signatures for partner community subscription purchases</description>
        <label>SignatureURL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>