force-app/main/default/objects/Subscription__c/fields/Source__c.field-meta.xml
<CustomField>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Source</valueSetName>
        </valueSet>
    </CustomField>