force-app/main/default/objects/Subscription__c/fields/Source_Campaign__c.field-meta.xml
<CustomField>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>