force-app/main/default/objects/Subscription__c/fields/subscription_Account__c.field-meta.xml
<CustomField>
        <fullName>subscription_Account__c</fullName>
        <description>Relationship between Account and Subscriptions</description>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </CustomField>