force-app/main/default/objects/Subscription__c/fields/subscription_Add_Ons_Total__c.field-meta.xml
<CustomField>
        <fullName>subscription_Add_Ons_Total__c</fullName>
        <description>SUM of Recurly Subscription Add Ons</description>
        <label>Add Ons Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>