force-app/main/default/objects/Subscription__c/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
        <fullName>Subscription_Amount__c</fullName>
        <formula>subscription_Offer__r.Total_Amount__c +  subscription_Offer__r.Activation_Fee__c</formula>
        <inlineHelpText>Total Subscription Amount plus Activation Fee</inlineHelpText>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>