force-app/main/default/objects/Subscription__c/fields/subscription_Auto_Renew__c.field-meta.xml
<CustomField>
        <fullName>subscription_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls Auto Renew of Subscription</description>
        <inlineHelpText>If true, this denotes that the subscription is on EZ-pay</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </CustomField>