force-app/main/default/objects/Subscription__c/fields/subscription_Billing_Cycle__c.field-meta.xml
<CustomField>
        <fullName>subscription_Billing_Cycle__c</fullName>
        <description>Stores the billing cycle for subscription</description>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>