force-app/main/default/objects/Subscription__c/fields/subscription_Canceled_At__c.field-meta.xml
<CustomField>
        <fullName>subscription_Canceled_At__c</fullName>
        <description>Displays the date and time a subscription was cancelled</description>
        <label>Canceled At</label>
        <type>DateTime</type>
    </CustomField>