force-app/main/default/objects/Subscription__c/fields/subscription_Collection_Method__c.field-meta.xml
<CustomField>
        <fullName>subscription_Collection_Method__c</fullName>
        <description>Stores the collection method; automatic or manual</description>
        <label>Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>automatic</fullName>
                </value>
                <value>
                    <fullName>manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>