force-app/main/default/objects/Subscription__c/fields/subscription_Coupon_Code__c.field-meta.xml
<CustomField>
        <fullName>subscription_Coupon_Code__c</fullName>
        <description>Stores the Coupon code used on this subscription</description>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>