force-app/main/default/objects/Subscription__c/fields/subscription_Created_in_Recurly_At__c.field-meta.xml
<CustomField>
        <fullName>subscription_Created_in_Recurly_At__c</fullName>
        <description>Stores the date and time subscription record was created in Recurly</description>
        <label>Created in Recurly At</label>
        <type>DateTime</type>
    </CustomField>