force-app/main/default/objects/Subscription__c/fields/subscription_Current_Period_Ends_At__c.field-meta.xml
<CustomField>
        <fullName>subscription_Current_Period_Ends_At__c</fullName>
        <description>Stores the date and time when the current subscription ends</description>
        <inlineHelpText>See the "Expires On" field below to see End date + Grace Days</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>