force-app/main/default/objects/Subscription__c/fields/subscription_Current_Period_Started_At__c.field-meta.xml
<CustomField>
        <fullName>subscription_Current_Period_Started_At__c</fullName>
        <description>Stores the date and time the current subscription started</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>