force-app/main/default/objects/Subscription__c/fields/subscription_Customer_Notes__c.field-meta.xml
<CustomField>
        <fullName>subscription_Customer_Notes__c</fullName>
        <description>Stores any customer notes related to the subscription</description>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>