force-app/main/default/objects/Subscription__c/fields/subscription_Expiration_Reason__c.field-meta.xml
<CustomField>
        <fullName>subscription_Expiration_Reason__c</fullName>
        <description>Expiration Reason for subscription used in DSI</description>
        <label>Expiration Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAC</fullName>
                </value>
                <value>
                    <fullName>TAD</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>TBP</fullName>
                </value>
                <value>
                    <fullName>TBS</fullName>
                </value>
                <value>
                    <fullName>TCM</fullName>
                </value>
                <value>
                    <fullName>TDB</fullName>
                </value>
                <value>
                    <fullName>TDE</fullName>
                </value>
                <value>
                    <fullName>TDN</fullName>
                </value>
                <value>
                    <fullName>TDU</fullName>
                </value>
                <value>
                    <fullName>TDV</fullName>
                </value>
                <value>
                    <fullName>TEC</fullName>
                </value>
                <value>
                    <fullName>TEM</fullName>
                </value>
                <value>
                    <fullName>THO</fullName>
                </value>
                <value>
                    <fullName>TIA</fullName>
                </value>
                <value>
                    <fullName>TIE</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>TIS</fullName>
                </value>
                <value>
                    <fullName>TMR</fullName>
                </value>
                <value>
                    <fullName>TMV</fullName>
                </value>
                <value>
                    <fullName>TNP</fullName>
                </value>
                <value>
                    <fullName>TNR</fullName>
                </value>
                <value>
                    <fullName>TNS</fullName>
                </value>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>TOB</fullName>
                </value>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>TPS</fullName>
                </value>
                <value>
                    <fullName>TRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>