force-app/main/default/objects/Subscription__c/fields/subscription_Expired_At__c.field-meta.xml
<CustomField>
        <fullName>subscription_Expired_At__c</fullName>
        <description>Stores the date and time the subscription expired</description>
        <label>Expired At</label>
        <type>DateTime</type>
    </CustomField>