force-app/main/default/objects/Subscription__c/fields/subscription_In_Trial__c.field-meta.xml
<CustomField>
        <fullName>subscription_In_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this subscription is in the trial period</description>
        <label>In Trial</label>
        <type>Checkbox</type>
    </CustomField>