force-app/main/default/objects/Subscription__c/fields/subscription_Net_Terms__c.field-meta.xml
<CustomField>
        <fullName>subscription_Net_Terms__c</fullName>
        <description>Stores the Net Terms (Months)</description>
        <label>Net Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>