force-app/main/default/objects/Subscription__c/fields/subscription_Next_Bill_Date__c.field-meta.xml
<CustomField>
        <fullName>subscription_Next_Bill_Date__c</fullName>
        <description>Stores the date and time of the next bill date</description>
        <label>Next Bill Date</label>
        <type>DateTime</type>
    </CustomField>