force-app/main/default/objects/Subscription__c/fields/subscription_Num_of_Renewals_Remaining__c.field-meta.xml
<CustomField>
        <fullName>subscription_Num_of_Renewals_Remaining__c</fullName>
        <description>Stores the number of renewals remaining on a subscription</description>
        <label>Number of Renewals Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>