force-app/main/default/objects/Subscription__c/fields/subscription_Offer__c.field-meta.xml
<CustomField>
        <fullName>subscription_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the relationship to Offer</description>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </CustomField>